# tauri-macos

./: .prettierrc  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: depoly.yml  main.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/@types/: app-menu.d.ts  dock.d.ts  menu.d.ts  router.d.ts  theme.d.ts  user.d.ts
src/components/: index.ts
src/components/DeskTop/: index.tsx
src/components/Dock/: index.less  index.tsx
src/components/DockCard/: index.tsx
src/components/Header/: index.tsx
src/components/Modal/: index.tsx
src/components/Option/: index.tsx
src/config/: theme.ts
src/layouts/: index.tsx
src/store/: app-menu.ts  dock.ts  index.ts
src/utils/: index.ts  local-storage.ts
src/views/Desktop/: index.tsx
src/views/Desktop/Excel/: index.tsx
src/views/Login/: index.tsx
src/views/Safari/: index.tsx
src/views/Setup/: index.tsx
src/views/Setup/Dock/: index.tsx
src/views/Setup/Wallpaper/: index.tsx
