[package]
name = "tauri-macos"
version = "0.0.1"
description = "一个仿MacOs的桌面应用"
authors = ["Hongcha"]
license = ""
repository = ""
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "global-shortcut-all", "window-all", "shell-all", "process-all", "macos-private-api", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-vibrancy = { version = "0.3.0" }
window-shadows = { version = "0.2.0" }

[target.'cfg(windows)'.dependencies]
runas = "1.1.0"
deelevate = "0.2.0"
winreg = { version = "0.50", features = ["transactions"] }
windows-sys = { version = "0.48", features = ["Win32_System_LibraryLoader", "Win32_System_SystemInformation"] }

[target.'cfg(windows)'.dependencies.tauri]
features = ["global-shortcut-all", "icon-png", "process-all", "shell-all", "system-tray", "updater", "window-all"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
